@@ -27,6 +27,7 @@ Version 2.0.2
  - Fix the generation of fresh variable names for generator expressions
  - Fix subtype check to allow empty arrays as subtype of arrays of sets
  - Postpone flattening of some reified constraints
+ - Fix crash when using assert/2
  
 
 Version 2.0.1
